added title tag

--- a/html4.html
+++ b/html4.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Yaswanth</title>
         <link rel="stylesheet" href="html.css">
 
     </head>
